--- a/static/index.css
+++ b/static/index.css
@@ -56,14 +56,36 @@ label{
     background-color: black;
 }
 
+.container-rainbow {
+    background: linear-gradient(to bottom,red,green,blue);
+}
+
 .container-dark label,
-.container-dark span {
+.container-rainbow label,
+.container-dark span,
+.container-rainbow span {
     color:white;
 }
 
 /*
-TRIGGER */
-#triggerCanvas {
+RAVEN */
+#enemyRavenCanvas, #enemyCollisionCanvas {
+    width: 800px;
+    height: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 3px solid red;
+}
+
+#enemyCollisionCanvas{
+    opacity: 0;
+}
+
+/*
+EXPLOSION */
+#explosionCanvas {
     width: 400px;
     height: 700px;
     position: absolute;
