--- a/static/index.css
+++ b/static/index.css
@@ -68,6 +68,18 @@ label{
 }
 
 /*
+MOVE */
+#moveCanvas {
+    width: 500px;
+    height: 800px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 3px solid white;
+}
+
+/*
 GAME */
 #gameCanvas {
     width: 500px;
