--- a/static/index.css
+++ b/static/index.css
@@ -71,7 +71,7 @@ label{
 CONTROL */
 #controlCanvas {
     width: 800px;
-    height: 720px;
+    height: 700px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -142,6 +142,7 @@ BG */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);    
+    border: 3px solid white;
 }
 
 /*
