--- a/static/index.css
+++ b/static/index.css
@@ -70,8 +70,8 @@ label{
 /*
 CONTROL */
 #controlCanvas {
-    width: 800px;
-    height: 700px;
+    max-width: 100%;
+    max-height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
