--- a/static/index.css
+++ b/static/index.css
@@ -68,8 +68,8 @@ label{
 }
 
 /*
-CONTROL */
-#controlCanvas {
+GAME */
+#gameCanvas {
     max-width: 100%;
     max-height: 100%;
     position: absolute;
