--- a/static/index.css
+++ b/static/index.css
@@ -69,7 +69,11 @@ label{
 
 /*
 GAME */
-#gameCanvas {
+#gameCanvas,
+#statusCanvas,
+#enemyCanvas,
+#playerCanvas,
+#particleCanvas {
     max-width: 100%;
     max-height: 100%;
     position: absolute;
