--- a/static/index.css
+++ b/static/index.css
@@ -70,10 +70,8 @@ label{
 /*
 GAME */
 #gameCanvas,
-#statusCanvas,
-#enemyCanvas,
-#playerCanvas,
-#particleCanvas {
+#staticCanvas,
+#valueCanvas {
     max-width: 100%;
     max-height: 100%;
     position: absolute;
