--- a/static/index.css
+++ b/static/index.css
@@ -70,10 +70,11 @@ label{
 /*
 GAME */
 #gameCanvas,
-#staticCanvas,
+#guiCanvas,
 #valueCanvas,
 #controlCanvas,
-#controlMarkerCanvas {
+#pointerCanvas,
+#markerCanvas {
     max-width: 100%;
     max-height: 100%;
     position: absolute;
@@ -83,6 +84,10 @@ GAME */
     border: 3px solid white;
 }
 
-#controlMarkerCanvas{
+#markerCanvas,
+#pointerCanvas {
+    opacity: 0.5;
+}
+.hide {
     opacity: 0;
 }
