--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ GAME */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 3px solid white;
+    /* border: 3px solid white; */
 }
 
 #markerCanvas,
