--- a/static/index.css
+++ b/static/index.css
@@ -106,6 +106,11 @@ GAME */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
     /* border: 3px solid white; */
 }
 
