--- a/static/index.css
+++ b/static/index.css
@@ -91,6 +91,13 @@ GAME */
     white-space: nowrap;
     font-family: "Creepster", Arial, Helvetica, sans-serif;
     text-align: center;
+
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
 }
 
 #gameCanvas,
